crates/bevy_markdown/src/snapshots/bevy_markdown__tests__test_render_break_after_link_node.snap
---
source: crates/bevy_markdown/src/lib.rs
expression: node.clone()
---
Text {
    sections: [
        TextSection {
            value: "\n",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 18.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 0.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: "(link)[",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 18.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 0.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: "https://example.com",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 18.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 1.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: "]",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 18.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 0.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: "\n",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 18.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 0.0,
                    alpha: 1.0,
                },
            },
        },
        TextSection {
            value: "hello world",
            style: TextStyle {
                font: StrongHandle<Font>(AssetPathId(AssetPathId(SourcePathId(5753483401309755652), LabelId(6298619649789039366)))),
                font_size: 18.0,
                color: Rgba {
                    red: 0.0,
                    green: 0.0,
                    blue: 0.0,
                    alpha: 1.0,
                },
            },
        },
    ],
    alignment: Left,
    linebreak_behaviour: WordBoundary,
}
