crates/bevy_markdown/src/snapshots/bevy_markdown__tests__test_render_break_links.snap
---
source: crates/bevy_markdown/src/lib.rs
expression: node.link_sections.clone()
---
[
    None,
    None,
    None,
    None,
]
